--- a/matcher/templates/add_tags.html
+++ b/matcher/templates/add_tags.html
@@ -28,7 +28,8 @@
     <label for="comment">change comment:</label>
     {% set comment = 'add wikidata tag'
         if table | length == 1
-        else 'add wikidata tags within ' + place.name %}
+        else ('add wikidata tags within' +
+           (' the ' if ' of ' in place.name else ' ' + place.name)) %}
     <input class="form-control m-2"
            id="comment"
            name="comment"
