more sophisticated language choice for labels
- consider an item country when picking a label
- closes #87

--- a/matcher/templates/item_page.html
+++ b/matcher/templates/item_page.html
@@ -1,6 +1,8 @@
 {% from "macro.html" import taginfo_link %}
 {% extends "base.html" %}
 
+{% set label = entity.label() or '[no label]' %}
+
 {% block title %}{{ label }} ({{ qid }}){% endblock %}
 
 {% block style %}
