use https for titles. fixes #125

--- a/matcher/templates/item_page.html
+++ b/matcher/templates/item_page.html
@@ -21,7 +21,7 @@
     var lon = {{ '{:.4f}'.format(lon) }};
     var map = L.map('mapid').setView([lat, lon], 18);
 
-    L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
     var marker = L.marker([lat, lon]).addTo(map);
 
   </script>
