--- a/matcher/templates/wikidata_items.html
+++ b/matcher/templates/wikidata_items.html
@@ -25,6 +25,9 @@
 
   <div class="loading">
     <span id="load_wikidata" class="pending">loading names from wikidata</span><br>
+    <span id="wikidata_error">&nbsp;Wikidata error:
+      <span id="wikidata_error_message"></span><br>
+    </span>
     <span id="load_overpass" class="pending">retrieving OSM data from Overpass</span>
     <span id="overpass_slow" class="pending">&nbsp;(this will take a few minutes)</span>
     <br>
