fix #122 (unclear text)

--- a/matcher/templates/tag_list.html
+++ b/matcher/templates/tag_list.html
@@ -6,8 +6,8 @@
 <div class="container my-2">
 <h1>Search tags</h1>
 
-<p>List of {{ q | count }} search tags from Wikidata. Matched OSM elements
-don't necessarily all search tags.</p>
+<p>List of {{ q | count }} search tags from Wikidata.
+Matched OSM elements don't necessarily include all search tags.</p>
 
 <p>These results don't cover the whole planet, just place that have been
 searched for using this tool.</p>
