--- a/matcher/templates/search_results.html
+++ b/matcher/templates/search_results.html
@@ -9,7 +9,7 @@
         {% if hit.place and hit.place.state == 'ready' %}
             {% set hit_url = hit.place.candidates_url() %}
         {% else %}
-            {% set hit_url = url_for('matcher_progress', osm_type=hit.osm_type, osm_id=hit.osm_id) %}
+            {% set hit_url = url_for('matcher.matcher_progress', osm_type=hit.osm_type, osm_id=hit.osm_id) %}
         {% endif %}
         <a href="{{ hit_url }}">{{ hit.display_name }}</a>
       </b><br>
