--- a/matcher/templates/macro.html
+++ b/matcher/templates/macro.html
@@ -11,7 +11,7 @@
 
 {% macro taginfo_link(tag) %}{% if '=' in tag %}<a href="https://taginfo.openstreetmap.org/tags/{{ tag }}">{{ tag }}</a>{% else %}<a href="https://taginfo.openstreetmap.org/keys/{{ tag }}" class="text-nowrap">{{ tag }}</a>{% endif -%}{%- endmacro -%}
 
-{% macro candidate_info(c, is_picked=false, is_bad=false) %}
+{% macro candidate_info(c, is_picked=false, is_bad=false, show_tags=false) %}
   {% set search_tags = c.item.tags %}
   {% set m = c.get_match() %}
     <li>{{c.osm_type}}:
@@ -44,7 +44,7 @@
             </div>
          {% endfor %}
      {% endif %}
-     <div class="all-tags" id="candidate-{{ c.key }}">
+     <div{% if not show_tags %} class="hide-all-tags"{% endif %} id="candidate-{{ c.key }}">
        {% for k, v in c.tags.items() if k != 'way_area' %}
         {% set tag = k + '=' + v %}
         {% if k in search_tags or tag in search_tags %}
