--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -52,7 +52,8 @@
   <ul>
   {% for c in item.candidates %}
     {% set is_bad = (c.item_id, c.osm_type, c.osm_id) in bad_matches %}
-    {{ candidate_info(c, is_picked=(c == picked), is_bad=is_bad, show_tags=not checked) }}
+    {% set show_tags = (c == picked) and not checked %}
+    {{ candidate_info(c, is_picked=(c == picked), is_bad=is_bad, show_tags=show_tags) }}
   {% endfor %}
   </ul>
 {% endmacro %}
