Include item count on the confirmation page. fixes #137

--- a/matcher/templates/add_tags.html
+++ b/matcher/templates/add_tags.html
@@ -49,6 +49,8 @@
         <div id="upload-progress" class="progress-bar" role="progressbar"></div>
     </div>
 
+    <p>{{ '{:,d}'.format(table | count) }} matches to upload</p>
+
     <div class="my-3">
     <table class="table table-sm table-hover">
     <thead>
