Provide positive feedback when no new candidate
Fixes https://github.com/EdwardBetts/osm-wikidata/issues/147

--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -178,7 +178,7 @@ added tags to {{ '{:,d}'.format(obj.update_count) }} OSM elements
 
   {% else %}
 
-    <p>No candidates.</p>
+    <p>Congratulations, this area is processed! No new candidates.</p>
 
   {% endif %}
 
