--- a/matcher/templates/index.html
+++ b/matcher/templates/index.html
@@ -18,7 +18,7 @@
 </div>
 </div>
 
-<div class="container">
+<div class="container-fluid">
   {{ place_cards | safe }}
   <div class="text-right"><a href="{{ url_for('saved_places') }}">more places &hellip;</a>
 </div>
