--- a/matcher/templates/navbar.html
+++ b/matcher/templates/navbar.html
@@ -8,9 +8,7 @@
     <a class="dropdown-item" href="{{ url_for(name) }}">{{ navbar_pages[name] }}</a>
 {% endmacro %}
 
-
-<nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
-<div class="container">
+{% macro navbar_inner(name) %}
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -35,6 +33,7 @@
           {{ dropdown_item('criteria_page') }}
         </div>
       </li>
+      {{ nav_item('random_city') }}
     </ul>
     </ul>
     <ul class="navbar-nav">
@@ -53,7 +52,10 @@
         {% endif %}
     </ul>
   </div>
+{% endmacro %}
 
-
-</div>
+{% macro navbar() %}
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
+  {{ navbar_inner() }}
 </nav>
+{% endmacro %}
