--- a/matcher/templates/matcher.html
+++ b/matcher/templates/matcher.html
@@ -14,22 +14,32 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='Leaflet.markercluster/MarkerCluster.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='Leaflet.markercluster/MarkerCluster.Default.css') }}">
 <style>
-html, body { height: 100%; padding: 0; }
-body { overflow: hidden; }
-nav { margin-left: -15px; margin-right: -15px; }
 
-	.top {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-	}
+body, html {
+  height: 100%; margin: 0; padding: 0;
+  overflow: hidden;
+}
+.col {
+  position: absolute;
+  height: 100%;
+  flex: 1;
+  padding: 0px;
+  margin: 0;
+}
+
+.col1 {
+  left: 0;
+  width: 70%;
+  left: 30%;
+}
+
+.col2 {
+  overflow-y: auto;
+  width: 30%;
+}
+
 
   #mapid { height: 100%; }
-  /* #wrapper { overflow:hidden; height: 100%; } */
-  /* #wrapper { overflow-y:auto; height:100% } */
-  .message-col {
-      overflow-y: auto;
-  }
 
 </style>
 
@@ -38,17 +48,14 @@ nav { margin-left: -15px; margin-right: -15px; }
 {% from "navbar.html" import navbar_inner with context %}
 
 <body>
-<div class="container-fluid top">
+<div>
 
   <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
     {{ navbar_inner() }}
   </nav>
 
-  <div class="row" style="flex: 1;">
-    <div class="col-md-8 pl-0">
-      <div id="mapid"></div>
-    </div>
-    <div class="col-md-4 mt-3 message-col">
+  <div>
+    <div class="col col2 p-3">
       <div id="wrapper">
         <div id="messages">
           <h1>{{ place.name }}</h1>
@@ -65,6 +72,9 @@ nav { margin-left: -15px; margin-right: -15px; }
           <div id="messages"></div>
         </div>
       </div>
+    </div>
+    <div class="col col1">
+      <div id="mapid"></div>
     </div>
   </div>
 </div>
