add error style

--- a/matcher/templates/matcher.html
+++ b/matcher/templates/matcher.html
@@ -38,8 +38,9 @@ body, html {
   width: 30%;
 }
 
+#mapid { height: 100%; }
 
-  #mapid { height: 100%; }
+.error { background: red; color: white; padding: 3px; }
 
 </style>
 
