--- a/matcher/templates/search_results.html
+++ b/matcher/templates/search_results.html
@@ -4,7 +4,7 @@
 {% for hit in results %}
   <div class="box">
     {% if hit.icon %}<img src="{{ hit.icon.replace('http://', 'https://') }}">{% endif %}
-    {% if hit.osm_id and hit.osm_type != 'node' and hit.category in ('place', 'boundary') and (not hit.area or hit.area < 90000) %}
+    {% if hit.osm_id and hit.osm_type != 'node' and hit.category in ('place', 'boundary') and (not hit.area or hit.area < 90000) and not hit.geotext.startswith('LINESTRING(') %}
       <b>
         {% if hit.place and hit.place.state == 'ready' %}
             {% set hit_url = hit.place.candidates_url() %}
