--- a/matcher/templates/browse.html
+++ b/matcher/templates/browse.html
@@ -1,13 +1,19 @@
 {% from "macro.html" import place_box %}
 {% extends "base.html" %}
 
-{% block title %}{{ qid }}{% endblock %}
+{% block title %}Browse {{ place.name }} ({{ qid }}){% endblock %}
 
 {% block content %}
 <div class="container my-2">
 <div class="row">
 <div class="col">
-<h1>{{ qid }}</h1>
+
+{% if place %}
+  <h1>{{ place.name }} <small>({{ qid }})</small></h1>
+  {{ place_box(place) }}
+{% else %}
+  <h1>{{ qid }}</h1>
+{% endif %}
 
 <table class="table">
 <thead>
@@ -25,8 +31,8 @@
     ({{ row.qid }})
   </td>
   <td>
-    {% if not row.area or row.area < 8000 %}
-      <a href="{{ url_for('search_results', q=row.label + ', ' + row.start) }}">match</a>
+    {% if not row.area or row.area < 90000 %}
+      <a href="{{ url_for('matcher_wikidata', item_id=row.item_id) }}">match</a>
     {% else %}
       too big for matcher
     {% endif %}
