--- a/matcher/templates/search_results.html
+++ b/matcher/templates/search_results.html
@@ -3,8 +3,9 @@
 {% set detail = 0 %}
 {% for hit in results %}
   <div class="box">
-    {% if hit.icon %}<img src="{{ hit.icon.replace('http://', 'https://') }}">{% endif %}
-    {% if hit.osm_id and hit.osm_type != 'node' and hit.category in ('place', 'boundary') and (not hit.area or hit.area < 90000) and not hit.geotext.startswith('LINESTRING(') %}
+    {% if hit.osm_id and hit.osm_type != 'node' and hit.category in ('place', 'boundary') and
+        (not hit.area or config.PLACE_MIN_AREA < hit.area < config.PLACE_MAX_AREA) and
+        not hit.geotext.startswith('LINESTRING(') %}
       <b>
         {% if hit.place and hit.place.state == 'ready' %}
             {% set hit_url = hit.place.candidates_url() %}
@@ -13,21 +14,28 @@
         {% endif %}
         <a href="{{ hit_url }}">{{ hit.display_name }}</a>
       </b><br>
-    {% elif 0 and hit.osm_id and hit.osm_type == 'node' and hit.category in ('place', 'boundary') %}
-        {% set hit_url = url_for('node_is_in', osm_id=hit.osm_id) %}
-        <a href="{{ hit_url }}">{{ hit.display_name }}</a>
     {% else %}
-       <b>
-       {% if name %}
-         {{ name }}, {{ hit.address.state }}, {{ hit.address.country }}
+       {% if hit.place.wikidata and hit.area and hit.area >= config.PLACE_MAX_AREA %}
+         <b><a href="{{ hit.place.browse_url() }}">{{ hit.display_name }}</a></b>
+         (browse next level administrative subdivisions)
        {% else %}
-          {{ hit.display_name }}
-        {% endif %}
-        </b><br>
+         <b>
+         {% if name %}
+           {{ name }}, {{ hit.address.state }}, {{ hit.address.country }}
+         {% else %}
+            {{ hit.display_name }}
+          {% endif %}
+         </b>
+       {% endif %}
+       <br>
         {% if hit.category not in ('place', 'boundary') %}
             [matcher only works with place or boundary]<br>
-        {% elif hit.osm_type in ('way', 'relation') and hit.area and hit.area >= 90000 %}
-            [area too large]<br>
+        {% elif hit.osm_type in ('way', 'relation') and hit.area %}
+            {% if hit.area >= config.PLACE_MAX_AREA %}
+              [area too large for matcher]<br>
+            {% elif hit.area < config.PLACE_MIN_AREA %}
+              [area too small for matcher]<br>
+            {% endif %}
         {% endif %}
     {% endif %}
     category: {{ hit.category }}
