Update navbar for latest bootstrap 4.

--- a/matcher/templates/matcher.html
+++ b/matcher/templates/matcher.html
@@ -51,7 +51,7 @@ body, html {
 <body>
 <div>
 
-  <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
+  <nav class="navbar navbar-toggleable-md navbar-expand-lg navbar-dark bg-primary">
     {{ navbar_inner() }}
   </nav>
 
