--- a/matcher/templates/navbar.html
+++ b/matcher/templates/navbar.html
@@ -59,7 +59,7 @@
 {% endmacro %}
 
 {% macro navbar() %}
-<nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
+<nav class="navbar navbar-toggleable-md navbar-expand-lg navbar-dark bg-primary">
   {{ navbar_inner() }}
 </nav>
 {% endmacro %}
