Add a favicon. Closes #170.

--- a/matcher/templates/matcher.html
+++ b/matcher/templates/matcher.html
@@ -5,6 +5,7 @@
   <title>
     {{ place.display_name }}: OSM ↔ Wikidata
   </title>
+  <link rel="shortcut icon" href="{{url_for('static', filename='img/favicon.png')}}" />
 
   {% assets "style" %}
   <link rel="stylesheet" href="{{ ASSET_URL }}">
