--- a/matcher/templates/base.html
+++ b/matcher/templates/base.html
@@ -5,6 +5,7 @@
   <title>
     {% block title %}{% endblock %} OSM ↔ Wikidata
   </title>
+  <link rel="shortcut icon" href="{{url_for('static', filename='img/favicon.png')}}" />
 
   {% assets "style" %}
   <link rel="stylesheet" href="{{ ASSET_URL }}">
